[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenIdle-001.png" type="Texture" id=1]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenIdle-002.png" type="Texture" id=2]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenIdle-004.png" type="Texture" id=3]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenIdle-003.png" type="Texture" id=4]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenIdle-005.png" type="Texture" id=5]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenIdle-006.png" type="Texture" id=6]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenIdle-008.png" type="Texture" id=7]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenIdle-007.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Enemies/GreenSlime.gd" type="Script" id=9]
[ext_resource path="res://Sounds/pop.mp3" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Enemies/bounceZone.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sounds/EnemyHurt.mp3" type="AudioStream" id=12]
[ext_resource path="res://Scenes/FCTManager.tscn" type="PackedScene" id=13]
[ext_resource path="res://Lifebar.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Enemies/hitZone.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/GooSpat.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/BloodSplatterComponent.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreedDeath1.png" type="Texture" id=18]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreedDeath2.png" type="Texture" id=19]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreedDeath4.png" type="Texture" id=20]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreedDeath3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/blank.png" type="Texture" id=22]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenAttack-001.png" type="Texture" id=23]
[ext_resource path="res://Sprites/enemy/slimes/enemies/smallGreen/GreenAttack-002.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 8.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": false,
"name": "death",
"speed": 7.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[node name="GreenSlime" type="KinematicBody2D"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
collision_layer = 32
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "attack"
playing = true

[node name="topchecker" parent="." instance=ExtResource( 11 )]
position = Vector2( -0.378, -1.895 )
scale = Vector2( 1.343, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="Hurt" type="AudioStreamPlayer2D" parent="YSort"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="pop" type="AudioStreamPlayer2D" parent="YSort"]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="FCTManager" parent="." instance=ExtResource( 13 )]

[node name="HealthDisplay" parent="." instance=ExtResource( 14 )]
position = Vector2( 0, -9 )
scale = Vector2( 0.07, 0.07 )

[node name="hitZone" parent="." instance=ExtResource( 15 )]
position = Vector2( -0.295, -0.608 )
rotation = -3.14159
scale = Vector2( 3.696, 3.239 )

[node name="GooSpat" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, -2 )
scale = Vector2( 3, 3 )

[node name="BloodSplatterComponent" parent="." instance=ExtResource( 17 )]
BlooadParticleNumber = 30

[connection signal="OnDeath" from="." to="." method="_on_GreenSlime_OnDeath"]
[connection signal="OnDeath" from="." to="BloodSplatterComponent" method="_on_GreenSlime_OnDeath"]
[connection signal="body_entered" from="topchecker" to="." method="_on_topchecker_body_entered"]
